--- a/DocFX.Repository.Sweeper/DocFX.Repository.Sweeper.csproj
+++ b/DocFX.Repository.Sweeper/DocFX.Repository.Sweeper.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="ShellProgressBar" Version="4.2.0" />
   </ItemGroup>
 
 </Project>
