Added progress indicators and fixed another bug.

--- a/DocFX.Repository.SweeperTests/DocFX.Repository.SweeperTests.csproj
+++ b/DocFX.Repository.SweeperTests/DocFX.Repository.SweeperTests.csproj
@@ -6,11 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="docs-repo\image-four.png" />
-    <None Remove="docs-repo\ref-four.md" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -31,6 +26,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="docs-repo\image-two.jpeg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="docs-repo\ref-five.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="docs-repo\ref-four.md">
