Fixed even more bugs.

--- a/DocFX.Repository.SweeperTests/DocFX.Repository.SweeperTests.csproj
+++ b/DocFX.Repository.SweeperTests/DocFX.Repository.SweeperTests.csproj
@@ -6,11 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="docs-repo\media\serious.png" />
-    <None Remove="docs-repo\ref-six.md" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -36,6 +31,9 @@
     <Content Include="docs-repo\media\serious.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="docs-repo\media\spaces.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="docs-repo\subdir\ref-six.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -45,7 +43,7 @@
     <Content Include="docs-repo\ref-four.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="docs-repo\ref-three.md">
+    <Content Include="docs-repo\ref-%28three%29.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="docs-repo\ref-two.md">
@@ -60,7 +58,7 @@
     <Content Include="docs-repo\grandparent\grandparent-topic.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="docs-repo\grandparent\media\csharp-logo.png">
+    <Content Include="docs-repo\grandparent\media\csharp logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="docs-repo\grandparent\parent\child\child-topic.md">
