--- a/DocFX.Repository.SweeperTests/DocFX.Repository.SweeperTests.csproj
+++ b/DocFX.Repository.SweeperTests/DocFX.Repository.SweeperTests.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <None Remove="docs-repo\docfx.json" />
+    <None Remove="docs-repo\media\serious - Copy.png" />
     <None Remove="docs-repo\ref-seven.md" />
     <None Remove="docs-repo\tbl-image.png" />
   </ItemGroup>
@@ -23,6 +24,9 @@
 
   <ItemGroup>
     <Content Include="docs-repo\docfx.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="docs-repo\media\context\image-five.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="docs-repo\media\tbl-image.png">
