--- a/DocFX.Repository.Sweeper/DocFX.Repository.Sweeper.csproj
+++ b/DocFX.Repository.Sweeper/DocFX.Repository.Sweeper.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <StartupObject>DocFX.Repository.Sweeper.Program</StartupObject>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>7.3</LangVersion>
     <AssemblyName>sweeper</AssemblyName>
   </PropertyGroup>
 
