--- a/DocFX.Repository.SweeperTests/DocFX.Repository.SweeperTests.csproj
+++ b/DocFX.Repository.SweeperTests/DocFX.Repository.SweeperTests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="docs-repo\docfx.json" />
+    <None Remove="docs-repo\media\more.jpg" />
     <None Remove="docs-repo\media\serious - Copy.png" />
     <None Remove="docs-repo\ref-seven.md" />
     <None Remove="docs-repo\tbl-image.png" />
@@ -28,6 +29,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="docs-repo\media\context\image-five.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="docs-repo\media\more.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="docs-repo\media\tbl-image.png">
