Added the ability to determine cross reference from URL

--- a/DocFX.Repository.Sweeper/Properties/launchSettings.json
+++ b/DocFX.Repository.Sweeper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DocFX.Repository.Sweeper": {
       "commandName": "Project",
-      "commandLineArgs": "--delete --images --limit 100 --directory \"C:\\Repos\\azure-docs-pr\\articles\\active-directory\""
+      "commandLineArgs": "--delete --images --limit 100 --directory \"C:\\Repos\\azure-docs-pr\\articles\\active-directory-b2c\""
     }
   }
 }
