Added to the unit testing for the double folder issue

--- a/DocFX.Repository.SweeperTests/DocFX.Repository.SweeperTests.csproj
+++ b/DocFX.Repository.SweeperTests/DocFX.Repository.SweeperTests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="docs-repo\docfx.json" />
+    <None Remove="docs-repo\media\context\context\seriously-why.png" />
     <None Remove="docs-repo\media\more.jpg" />
     <None Remove="docs-repo\media\serious - Copy.png" />
     <None Remove="docs-repo\ref-seven.md" />
@@ -25,6 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="docs-repo\media\context\context\seriously-why.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="docs-repo\media\index\link.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
