Massive optimization refactor. Use binary caching of tokenized files. Quick persist after materialization. Moved to ValueTask where possible.

--- a/DocFX.Repository.Sweeper/Properties/launchSettings.json
+++ b/DocFX.Repository.Sweeper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DocFX.Repository.Sweeper": {
       "commandName": "Project",
-      "commandLineArgs": "-o --topics --directory \"C:\\Repos\\azure-docs-pr\\articles\\active-directory\""
+      "commandLineArgs": "-o -t -s \"C:\\Repos\\azure-docs-pr\\articles\""
     }
   }
 }
