Implemented caching and added a bit more encapsulation.

--- a/DocFX.Repository.Sweeper/DocFX.Repository.Sweeper.csproj
+++ b/DocFX.Repository.Sweeper/DocFX.Repository.Sweeper.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="YamlDotNet" Version="6.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DocFX.Repository.Extensions\DocFX.Repository.Extensions.csproj" />
+  </ItemGroup>
+
 </Project>
