--- a/DocFX.Repository.Extensions/DocFX.Repository.Extensions.csproj
+++ b/DocFX.Repository.Extensions/DocFX.Repository.Extensions.csproj
@@ -1,7 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="protobuf-net" Version="2.4.0" />
+    <PackageReference Include="YamlDotNet" Version="6.1.2" />
+  </ItemGroup>
 
 </Project>
