--- a/DocFX.Repository.Sweeper/DocFX.Repository.Sweeper.csproj
+++ b/DocFX.Repository.Sweeper/DocFX.Repository.Sweeper.csproj
@@ -6,6 +6,8 @@
     <StartupObject>DocFX.Repository.Sweeper.Program</StartupObject>
     <LangVersion>7.3</LangVersion>
     <AssemblyName>sweeper</AssemblyName>
+    <Authors>IEvangelist</Authors>
+    <Company>Microsoft</Company>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
